Clase del 24 de Feb

--- a/Fundamentos Bootstrasp/gridEjercicio3.html
+++ b/Fundamentos Bootstrasp/gridEjercicio3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clase 23 Feb</title>
+    <title>Clase 23 Feb y 24</title>
 
 
     <!-- Bootstrap CSS -->
@@ -17,39 +17,55 @@
     <div class="container">
         <div class="row">
             <div class="col-6">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo deserunt maiores minima quibusdam exercitationem repudiandae omnis sit libero deleniti voluptas, ipsa commodi quos corporis laudantium ex facilis rerum, numquam natus!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo deserunt maiores minima quibusdam
+                    exercitationem repudiandae omnis sit libero deleniti voluptas, ipsa commodi quos corporis laudantium
+                    ex facilis rerum, numquam natus!</p>
             </div>
             <div class="col-6">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo deserunt maiores minima quibusdam exercitationem repudiandae omnis sit libero deleniti voluptas, ipsa commodi quos corporis laudantium ex facilis rerum, numquam natus!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo deserunt maiores minima quibusdam
+                    exercitationem repudiandae omnis sit libero deleniti voluptas, ipsa commodi quos corporis laudantium
+                    ex facilis rerum, numquam natus!</p>
             </div>
         </div>
         <hr>
         <div class="row">
             <div class="col-3">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ducimus nostrum quos repudiandae omnis distinctio ad vero odio non minima?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ducimus nostrum quos
+                    repudiandae omnis distinctio ad vero odio non minima?</p>
             </div>
             <div class="col-3">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, quidem dignissimos? Sint, recusandae enim. Quisquam quo non adipisci nobis recusandae!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, quidem dignissimos? Sint,
+                    recusandae enim. Quisquam quo non adipisci nobis recusandae!</p>
             </div>
             <div class="col-6">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo deserunt maiores minima quibusdam exercitationem repudiandae omnis sit libero deleniti voluptas, ipsa commodi quos corporis laudantium ex facilis rerum, numquam natus!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo deserunt maiores minima quibusdam
+                    exercitationem repudiandae omnis sit libero deleniti voluptas, ipsa commodi quos corporis laudantium
+                    ex facilis rerum, numquam natus!</p>
             </div>
         </div>
         <hr>
         <div class="row">
-            <div class="col-3">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ducimus nostrum quos repudiandae omnis distinctio ad vero odio non minima?</p>
+            <!-- Dividir columna de 9 en 2 -->
+            <div class="col-9">
+                <div class="row">
+                    <div class="col-6">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex, ullam sed sit eius cum
+                            sapiente?</p>
+                    </div>
+                    <div class="col-6">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex, ullam sed sit eius cum
+                            sapiente?</p>
+                    </div>
+                </div>
             </div>
             <div class="col-3">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, quidem dignissimos? Sint, recusandae enim. Quisquam quo non adipisci nobis recusandae!</p>
-            </div>
-            <div class="col-6">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo deserunt maiores minima quibusdam exercitationem repudiandae omnis sit libero deleniti voluptas, ipsa commodi quos corporis laudantium ex facilis rerum, numquam natus!</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam ipsam voluptate quo aspernatur!
+                    Eligendi, facilis.</p>
             </div>
         </div>
 
     </div>
-        
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
