--- a/GUÍA DE EJERCICIOS - Angel David Quintanilla Ferrufino/Ejercicio3_Responsive.html
+++ b/GUÍA DE EJERCICIOS - Angel David Quintanilla Ferrufino/Ejercicio3_Responsive.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="container">
-    <div class="bg-white ">
+    <div class="bg-white marginB ">
         <div class="row align-items-center bg-dark classPadding2">
             <div class="col-12 col-sm-12 col-md-2 col-lg-2">
                 <div class="imgBordeExterior">
@@ -64,8 +64,8 @@
             </div>
         </div>
     </div>
-    <div class="row bg-info">
-        <p class="col-12 col-md-12 col-lg-12 copyright">
+    <div class="row bg-info copyright">
+        <p class="col-12 col-md-12 col-lg-12 ">
             @AngelQuintanilla_2022
         </p>
     </div>
